refactor: remove view field and add transactional